--- a/templates/dodaj.html
+++ b/templates/dodaj.html
@@ -7,6 +7,7 @@
         <p><form action="/dodaj" method="post">
             <input type="text" name="osoba" placeholder="Osoba"><br>
             <input type="number" name="kwota" placeholder="Kwota (zł)"><br>
+            <input type="text" name="opis" placeholder="Krótki opis"><br>
             <input type="radio" id="komus" name="typ" value="komuś" checked>
             <label for="komus">Pożyczone komuś</label><br>
             <input type="radio" id="od kogos" name="typ" value="od kogoś">
