--- a/templates/dodaj.html
+++ b/templates/dodaj.html
@@ -5,9 +5,9 @@
 
     <body>
         <p><form action="/dodaj" method="post">
-            <input type="text" name="osoba" placeholder="Osoba"><br>
-            <input type="number" name="kwota" step="0.01" placeholder="Kwota (zł)"><br>
-            <input type="text" name="opis" placeholder="Krótki opis"><br>
+            <input type="text" name="osoba" placeholder="Osoba" value="{{osoba}}"><br>
+            <input type="number" name="kwota" step="0.01" placeholder="Kwota (zł)" value="{{kwota}}"><br>
+            <input type="text" name="opis" placeholder="Krótki opis" value="{{opis}}"><br>
             <input type="radio" id="komus" name="typ" value="komuś" checked>
             <label for="komus">Pożyczone komuś</label><br>
             <input type="radio" id="od kogos" name="typ" value="od kogoś">
