--- a/templates/szybkie_dodawanie.html
+++ b/templates/szybkie_dodawanie.html
@@ -5,14 +5,14 @@
 
     <body>
         <p><form action="/szybkie-dodawanie" method="post">
-            <input type="text" name="osoba" placeholder="Osoba"><br>
-            <input type="number" name="kwota" step="0.01" placeholder="Kwota (zł)"><br>
-            <input type="text" name="opis" placeholder="Krótki opis"><br>
+            <input type="text" name="osoba" placeholder="Osoba" value="{{osoba}}"><br>
+            <input type="number" name="kwota" step="0.01" placeholder="Kwota (zł)" value="{{kwota}}"><br>
+            <input type="text" name="opis" placeholder="Krótki opis" value="{{opis}}"><br>
             <input type="radio" id="komus" name="typ" value="komuś" checked>
             <label for="komus">Pożyczone komuś</label><br>
             <input type="radio" id="od kogos" name="typ" value="od kogoś">
             <label for="od kogos">Pożyczone od kogoś</label><br>
-            <input type="text" name="skrot" placeholder="Nazwa akcji">
+            <input type="text" name="skrot" placeholder="Nazwa akcji" value="{{skrot}}">
             <input type="submit" value="Dodaj">
             <input type="submit" name="anulowany" value="Powrót">
         </form></p>
